// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App 01 no content 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "display": "flex",
      "flexDirection": "column",
      "minHeight": "100%",
      "padding": "0px 10px",
    }
  }
>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    }
  />
  <div
    className="giu-notifications"
    style={
      Object {
        "bottom": 20,
        "maxWidth": 350,
        "position": "fixed",
        "right": 20,
        "zIndex": 9000,
      }
    }
  />
  <div
    className="giu-hints"
  />
  <div
    changeFilter={[Function]}
    dataMockType="Header"
    filter="ALL"
    lang="en"
    onShowSettings={[Function]}
  >
    Header
  </div>
  <div
    changeSelectedKey={[Function]}
    dataMockType="Translator"
    filter="ALL"
    lang="en"
    selectedKeyId={null}
    viewer={
      Object {
        "config": Object {
          "langs": Array [
            "es",
            "ca",
            "en",
          ],
        },
        "id": "me",
        "keys": Object {
          "edges": Array [],
        },
      }
    }
  >
    Translator (no selection)
  </div>
</div>
------------HTML PREVIEW---------------
<div style="background-color:white;display:flex;flex-direction:column;min-height:100%;padding:0px 10px;">
  <div
    class="giu-floats"
    style="height:0;left:0;position:absolute;top:0;width:0;"
  >
  </div>
  <div
    class="giu-notifications"
    style="bottom:20px;max-width:350px;position:fixed;right:20px;z-index:9000;"
  >
  </div>
  <div class="giu-hints"></div>
  <div
    dataMockType="Header"
    filter="ALL"
    lang="en"
  >
    Header
  </div>
  <div
    dataMockType="Translator"
    filter="ALL"
    lang="en"
  >
    Translator (no selection)
  </div>
</div>
`;

exports[`App 02 shows the settings when clicked 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "display": "flex",
      "flexDirection": "column",
      "minHeight": "100%",
      "padding": "0px 10px",
    }
  }
>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    }
  />
  <div
    className="giu-notifications"
    style={
      Object {
        "bottom": 20,
        "maxWidth": 350,
        "position": "fixed",
        "right": 20,
        "zIndex": 9000,
      }
    }
  />
  <div
    className="giu-hints"
  />
  <div
    changeFilter={[Function]}
    dataMockType="Header"
    filter="ALL"
    lang="en"
    onShowSettings={[Function]}
  >
    Header
  </div>
  <div
    changeSelectedKey={[Function]}
    dataMockType="Translator"
    filter="ALL"
    lang="en"
    selectedKeyId={null}
    viewer={
      Object {
        "config": Object {
          "langs": Array [
            "es",
            "ca",
            "en",
          ],
        },
        "id": "me",
        "keys": Object {
          "edges": Array [],
        },
      }
    }
  >
    Translator (no selection)
  </div>
  <div
    dataMockType="Settings"
    lang="en"
    onChangeLang={[Function]}
    onClose={[Function]}
    viewer={
      Object {
        "config": Object {
          "langs": Array [
            "es",
            "ca",
            "en",
          ],
        },
        "id": "me",
        "keys": Object {
          "edges": Array [],
        },
      }
    }
  >
    Settings
  </div>
</div>
------------HTML PREVIEW---------------
<div style="background-color:white;display:flex;flex-direction:column;min-height:100%;padding:0px 10px;">
  <div
    class="giu-floats"
    style="height:0;left:0;position:absolute;top:0;width:0;"
  >
  </div>
  <div
    class="giu-notifications"
    style="bottom:20px;max-width:350px;position:fixed;right:20px;z-index:9000;"
  >
  </div>
  <div class="giu-hints"></div>
  <div
    dataMockType="Header"
    filter="ALL"
    lang="en"
  >
    Header
  </div>
  <div
    dataMockType="Translator"
    filter="ALL"
    lang="en"
  >
    Translator (no selection)
  </div>
  <div
    dataMockType="Settings"
    lang="en"
  >
    Settings
  </div>
</div>
`;

exports[`App 02 shows the settings when clicked 2`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "display": "flex",
      "flexDirection": "column",
      "minHeight": "100%",
      "padding": "0px 10px",
    }
  }
>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    }
  />
  <div
    className="giu-notifications"
    style={
      Object {
        "bottom": 20,
        "maxWidth": 350,
        "position": "fixed",
        "right": 20,
        "zIndex": 9000,
      }
    }
  />
  <div
    className="giu-hints"
  />
  <div
    changeFilter={[Function]}
    dataMockType="Header"
    filter="ALL"
    lang="en"
    onShowSettings={[Function]}
  >
    Header
  </div>
  <div
    changeSelectedKey={[Function]}
    dataMockType="Translator"
    filter="ALL"
    lang="en"
    selectedKeyId={null}
    viewer={
      Object {
        "config": Object {
          "langs": Array [
            "es",
            "ca",
            "en",
          ],
        },
        "id": "me",
        "keys": Object {
          "edges": Array [],
        },
      }
    }
  >
    Translator (no selection)
  </div>
</div>
------------HTML PREVIEW---------------
<div style="background-color:white;display:flex;flex-direction:column;min-height:100%;padding:0px 10px;">
  <div
    class="giu-floats"
    style="height:0;left:0;position:absolute;top:0;width:0;"
  >
  </div>
  <div
    class="giu-notifications"
    style="bottom:20px;max-width:350px;position:fixed;right:20px;z-index:9000;"
  >
  </div>
  <div class="giu-hints"></div>
  <div
    dataMockType="Header"
    filter="ALL"
    lang="en"
  >
    Header
  </div>
  <div
    dataMockType="Translator"
    filter="ALL"
    lang="en"
  >
    Translator (no selection)
  </div>
</div>
`;

exports[`App 03 changes the selected key when clicked and shows details 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "display": "flex",
      "flexDirection": "column",
      "minHeight": "100%",
      "padding": "0px 10px",
    }
  }
>
  <div
    className="giu-floats"
    style={
      Object {
        "height": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 0,
      }
    }
  />
  <div
    className="giu-notifications"
    style={
      Object {
        "bottom": 20,
        "maxWidth": 350,
        "position": "fixed",
        "right": 20,
        "zIndex": 9000,
      }
    }
  />
  <div
    className="giu-hints"
  />
  <div
    changeFilter={[Function]}
    dataMockType="Header"
    filter="ALL"
    lang="en"
    onShowSettings={[Function]}
  >
    Header
  </div>
  <div
    changeSelectedKey={[Function]}
    dataMockType="Translator"
    filter="ALL"
    lang="en"
    selectedKeyId="SELECTED_KEY"
    viewer={
      Object {
        "config": Object {
          "langs": Array [
            "es",
            "ca",
            "en",
          ],
        },
        "id": "me",
        "keys": Object {
          "edges": Array [],
        },
      }
    }
  >
    Translator (SELECTED_KEY)
  </div>
  <div
    dataMockType="Details"
    lang="en"
    selectedKeyId="SELECTED_KEY"
  >
    Details (SELECTED_KEY)
  </div>
</div>
------------HTML PREVIEW---------------
<div style="background-color:white;display:flex;flex-direction:column;min-height:100%;padding:0px 10px;">
  <div
    class="giu-floats"
    style="height:0;left:0;position:absolute;top:0;width:0;"
  >
  </div>
  <div
    class="giu-notifications"
    style="bottom:20px;max-width:350px;position:fixed;right:20px;z-index:9000;"
  >
  </div>
  <div class="giu-hints"></div>
  <div
    dataMockType="Header"
    filter="ALL"
    lang="en"
  >
    Header
  </div>
  <div
    dataMockType="Translator"
    filter="ALL"
    lang="en"
    selectedKeyId="SELECTED_KEY"
  >
    Translator (SELECTED_KEY)
  </div>
  <div
    dataMockType="Details"
    lang="en"
    selectedKeyId="SELECTED_KEY"
  >
    Details (SELECTED_KEY)
  </div>
</div>
`;
